FIX: dont make scrollbar move the content

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -66,6 +66,7 @@ html {
   font-size: 100%;
   scroll-behavior: smooth;
   color-scheme: light;
+  scrollbar-gutter: stable;
 
   @media (max-width: $breakpoint-tablet) {
     font-size: 87.5%; // 14px
